--- a/pruebas/majprofe/02-bazar-universal/package.json
+++ b/pruebas/majprofe/02-bazar-universal/package.json
@@ -12,6 +12,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
